--- a/index.html
+++ b/index.html
@@ -38,5 +38,10 @@
                       <p>My name is Alex Reyes, I am the youngest of 3 brothers. In my, family coding has never came up in any conversation in my household. I learn about coding through a highschool STEM EXPO I attended last year.</p>
                       <p>In college, I didn't have a set path to follow.</p>
                     </section>
+    <footer>
+        <div class="container">
+            Copyright &copy;
+        </div>
+    </footer>
 </body>
 </html>
