--- a/portfolio.html
+++ b/portfolio.html
@@ -30,5 +30,10 @@
           </div>
         </div>
     </nav>
+    <footer>
+        <div class="container">
+            Copyright &copy;
+        </div>
+    </footer>
 </body>
 </html>
