--- a/contact.html
+++ b/contact.html
@@ -30,21 +30,18 @@
           </div>
         </div>
     </nav>
+    <div class="row"></div>
+      <div class="col-md-4">
+
+      </div>
+
+      <div class="col-md-6">
     <form>
+      
+        <!-- <div class="col-md-6"> -->
             <div class="form-group">
               <label for="exampleFormControlInput1">Email address</label>
               <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-            </div>
-            <div class="form-group">
-              <label for="exampleFormControlSelect1">Example select</label>
-              <select class="form-control" id="exampleFormControlSelect1">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-              </select>
-            </div>
             <div class="form-group">
               <label for="exampleFormControlSelect2">Example multiple select</label>
               <select multiple class="form-control" id="exampleFormControlSelect2">
@@ -59,6 +56,15 @@
               <label for="exampleFormControlTextarea1">Example textarea</label>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
+            </div>
+            <div class="col-md-2">
           </form>
+  <footer>
+    <div class="container">
+      Copyright &copy;
+    </div>
+  </div>
+  </footer>
+</div>
 </body>
 </html>
