--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
         <title>Portfolio</title>
 </head>
 <body>
-    <nav class="container border border-light">
+    <nav class="container border border-dark">
         <div class="row">
           <div class="col-md-6">
            <p>Alex Reyes</p>
@@ -30,12 +30,8 @@
           </div>
         </div>
     </nav>
-    <div class="row"></div>
-      <div class="col-md-4">
-
-      </div>
-
-      <div class="col-md-6">
+    <!-- <div class="row"></div>
+      <div class="col-md-6"> -->
     <form>
       
         <!-- <div class="col-md-6"> -->
@@ -43,17 +39,15 @@
               <label for="exampleFormControlInput1">Email address</label>
               <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
             <div class="form-group">
-              <label for="exampleFormControlSelect2">Example multiple select</label>
-              <select multiple class="form-control" id="exampleFormControlSelect2">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
+              <label for="exampleFormControlSelect2">Best way to reach you</label>
+              <select multiple class="form-control" id="Best way to reach you">
+                <option>Call</option>
+                <option>Text</option>
+                <option>Email</option>
               </select>
             </div>
             <div class="form-group">
-              <label for="exampleFormControlTextarea1">Example textarea</label>
+              <label for="exampleFormControlTextarea1">Write in your number if you chose for a call/text.</label>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
             </div>
