--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/style.css" />
     <script src="main.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Portfolio</title>
 </head>
 <body>
-        <nav class="container border border-light">
+        <nav class="container border border-dark">
                 <div class="row">
                   <div class="col-md-6">
                    <p>Alex Reyes</p>
@@ -34,9 +34,9 @@
             <div id="main-container" class="container">
                     <section class="main-section">
                       <h1>About Me</h1>
-                      <img src="assets/images/alex-reyes.jpg" alt="Alex-Reyes" class="img-thumbnail">
-                      <p>My name is Alex Reyes, I am the youngest of 3 brothers. In my, family coding has never came up in any conversation in my household. I learn about coding through a highschool STEM EXPO I attended last year.</p>
-                      <p>In college, I didn't have a set path to follow.</p>
+                      <img src="assets/images/cat.jpg" alt="Alex-Reyes" class="img-thumbnail">
+                      <p>Hi, I am cat. I have four legs, for paws. My hobbies are sleeping and pooping</p>
+                      <p></p>
                     </section>
     <footer>
         <div class="container">
