--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
         <title>Portfolio</title>
 </head>
 <body>
-    <nav class="container border border-light">
+    <nav class="container border border-dark">
         <div class="row">
           <div class="col-md-6">
            <p>Alex Reyes</p>
@@ -30,6 +30,32 @@
           </div>
         </div>
     </nav>
+    <!-- <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Alex-Reyes" class="img-thumbnail">
+    <img src="assets/images/technics-q-c-640-480-2.jpg" alt="Alex-Reyes" class="img-thumbnail">
+    <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Alex-Reyes" class="img-thumbnail">
+    <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Alex-Reyes" class="img-thumbnail">
+    <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Alex-Reyes" class="img-thumbnail">
+     -->
+     <div class="text-center">
+        <img src="assets/images/technics-q-c-640-480-1.jpg" class="rounded" alt="...">
+        <h3>Word Guess</h3>
+      </div>
+      <div class="text-center">
+        <img src="assets/images/technics-q-c-640-480-2.jpg" class="rounded" alt="...">
+        <h3>RPG Game</h3>
+      </div>
+      <div class="text-center">
+        <img src="assets/images/technics-q-c-640-480-5.jpg" class="rounded" alt="...">
+        <h3>Trivia Game</h3>
+      </div>
+      <div class="text-center">
+        <img src="assets/images/technics-q-c-640-480-7.jpg" class="rounded" alt="...">
+        <h3>Rutgers Info Widget</h3>
+      </div>
+      <div class="text-center">
+        <img src="assets/images/technics-q-c-640-480-9.jpg" class="rounded" alt="...">
+        <h3>Rock Paper Scissors</h3>
+      </div>
     <footer>
         <div class="container">
             Copyright &copy;
