--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <div id="main-container" class="container">
                     <section class="main-section">
                       <h1>About Me</h1>
-                      <img src="assets/images/cat.jpg" alt="Alex-Reyes" class="img-thumbnail">
+                      <img src="assets/images/cat.jpg" alt="Alex-Reyes" class="img-thumbnail" style="width:25%">
                       <p>Hi, I am cat. I have four legs, for paws. My hobbies are sleeping and pooping</p>
-                      <p></p>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sit amet magna eget mi pellentesque dapibus. Phasellus ac mauris quis elit tincidunt pharetra aliquet et nunc. Vivamus in metus quis massa tempor pellentesque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at scelerisque mi. Maecenas ultrices rutrum interdum. Integer gravida sapien nec commodo malesuada. Aenean eget pretium libero. Maecenas sagittis vulputate sem, non lacinia erat fringilla at. Praesent et varius lectus. Morbi interdum ac diam eget fermentum. Praesent vel eros convallis, consectetur sem in, ullamcorper nisi. Donec efficitur lectus et leo semper sagittis.</p>
                     </section>
     <footer>
         <div class="container">
