--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="assets/style.css" />
         <script src="main.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <title>Portfolio</title>
@@ -30,36 +30,37 @@
           </div>
         </div>
     </nav>
-    <!-- <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Alex-Reyes" class="img-thumbnail">
-    <img src="assets/images/technics-q-c-640-480-2.jpg" alt="Alex-Reyes" class="img-thumbnail">
-    <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Alex-Reyes" class="img-thumbnail">
-    <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Alex-Reyes" class="img-thumbnail">
-    <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Alex-Reyes" class="img-thumbnail">
+    <!--If I move the images to the left or the right, the text does not follow
      -->
-     <div class="text-center">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" class="rounded" alt="...">
-        <h3>Word Guess</h3>
-      </div>
-      <div class="text-center">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" class="rounded" alt="...">
-        <h3>RPG Game</h3>
-      </div>
-      <div class="text-center">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" class="rounded" alt="...">
-        <h3>Trivia Game</h3>
-      </div>
-      <div class="text-center">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" class="rounded" alt="...">
-        <h3>Rutgers Info Widget</h3>
-      </div>
-      <div class="text-center">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" class="rounded" alt="...">
-        <h3>Rock Paper Scissors</h3>
-      </div>
+     <div id="main-container" class="container">
+       <div class="row">
+       <div class="column">
+        <img src="assets/images/technics-q-c-640-480-1.jpg" class="rounded" alt="Man hold an iPad" style="width:25%">
+        <p>Word Guess</p>
+       </div>
+       <div class="column">
+        <img src="assets/images/technics-q-c-640-480-2.jpg" class="rounded" alt="Dj Booth" style="width:25%">
+        <p>RPG Game</p>
+    </div>
+    <div class="column">
+        <img src="assets/images/technics-q-c-640-480-5.jpg" class="rounded " alt="Headphones" style="width:25%">
+        <p>Trivia Game</p>
+    </div>
+    <div class="column">
+        <img src="assets/images/technics-q-c-640-480-7.jpg" class="rounded " alt="Old iPhone and headphones" style="width:25%">
+        <p>Rutgers Info Widget</p>
+    </div>
+    <div class="column">
+        <img src="assets/images/technics-q-c-640-480-9.jpg" class="rounded " alt="Tv" style="widows: 25%">
+        <p>Rock Paper Scissors</p>
+    </div>
+    </div>
+    </div>
     <footer>
         <div class="container">
             Copyright &copy;
         </div>
+    </div>
     </footer>
 </body>
 </html>
