--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" media="screen" href=assets/style.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="assets/style.css" />
         <script src="main.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <title>Portfolio</title>
@@ -30,11 +30,8 @@
           </div>
         </div>
     </nav>
-    <!-- <div class="row"></div>
-      <div class="col-md-6"> -->
     <form>
       
-        <!-- <div class="col-md-6"> -->
             <div class="form-group">
               <label for="exampleFormControlInput1">Email address</label>
               <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
@@ -55,7 +52,7 @@
           </form>
   <footer>
     <div class="container">
-      Copyright &copy;
+    Copyright &copy;
     </div>
   </div>
   </footer>
